# fabric-rpc-rs

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml
docs/: Development.md
fabric-rpc-build/: Cargo.toml
fabric-rpc-build/src/: client.rs  code_gen.rs  lib.rs  server.rs
proto/: fabrichello.proto  fabricrpc.proto  todolist.proto
src/: client.rs  client_tr.rs  fabricrpc_header.rs  lib.rs  server.rs  server_tr.rs  shared_tr.rs  sys.rs  tests.rs
src/benches/: README.md  fabric_rpc_benchmark.rs  fabric_server.rs
tests/helloworld/: Cargo.toml  build.rs
tests/helloworld/src/: lib.rs
