[package]
name = "fabric-rpc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tonic = "0.9"
prost = "0.11"

[dependencies.fabric_base]
git = "https://github.com/youyuanwu/service-fabric-rs.git"
rev = "3f2bef6eaa5cbbb1b97ee27fb87205ecc9c5ebdb"
features = [
    "implement",
    "ServiceFabric_FabricCommon",
    "ServiceFabric_FabricCommon_FabricTransport",
    "Win32_Foundation"
]

[dependencies.windows]
version = "0.51"
features = [
    "Win32_Foundation",
    "implement"
]

[build-dependencies]
tonic-build = "0.9"
prost-build = "0.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }

[[bench]]
name = "fabric_rpc_benchmark"
path = "src/benches/fabric_rpc_benchmark.rs"
harness = false

[[bin]]
name = "fabric_server"
test = false
bench = false
path = "src/benches/fabric_server.rs"

# use local build crate for code gen
# [build-dependencies.fabric-rpc-build]
# path = "./fabric-rpc-build"


[workspace]
members = [
    "fabric-rpc-build",
    "tests/helloworld"
]
